--- a/Neutral/templates/foodRecord.html
+++ b/Neutral/templates/foodRecord.html
@@ -6,8 +6,7 @@
 {{super()}}
 <meta charset="utf-8">
         <title>Food Record</title>
-        <link rel="stylesheet"
-        href="{{url_for('.static', filename='search.css')}}">
+        <link rel="stylesheet" type="text/css" href="static/search.css">
  
         
 {% endblock %}
@@ -95,7 +94,7 @@
                     <thead>
                         <tr class="table-primary">
                             <th scope="col" style = 'text-align:left'>ID</th>
-                            <th scope="col" width = '350px' style = 'text-align:left'>Food Name</th>
+                            <th scope="col" width = '400px' style = 'text-align:left'>Food Name</th>
                             <th scope="col" style = 'text-align:center'>Calories</th>
                             <th scope="col" style = 'text-align:center'>Carb</th>
                             <th scope="col" style = 'text-align:center'>Fat</th>
